# schema-manager

./: 2018-08-2013-Atomicidade-em-read-process-write-v-0.3.MD  Pipfile  README.html  README.md  Session (AMAFVFWL6VZHV29's conflicted copy 2019-02-28).vim  Session.vim  boleto1.schm  deploy_control.schm  example.puml  imat.schm  int.txt  mypy.ini  pyproject.toml  saida.txt  saida.txtclea  schema.lark  schema_V02.xlsx  scheman  specification.MD  tasks.py
config/: avro.csv  datatypes.yaml  dataypes.yaml  mysql.csv  postgres.csv
docs/: schema_definiton.md  scheman_model.uml  specification.md
docs/adr/: 0001-record-architecture-decisions.md  0002-schema-technology-selected.md
examples/: mapping.schm
examples/cash/: beneficiario.rpcs  beneficiario.schm  boleto.rpcs  boleto.schm  comum.schm  schm.ctags  simulacaoBoletoSolicitada.events  tags
examples/imat/: imat.schm  imat_common.schm
grammar/: data_types.py  elements.py  saida  scheman.lark  scheman.lark_old  scheman_parser.py  scheman_pure.lark
scheman/: common_parser.py  const_parser.py  data_types.py  elements.py  enum_parser.py  exceptions.py  model_parser.py  module_parser.py  record_parser.py  scheman_parser.py  type_parser.py  user_type_parser.py  utils.py
tests/: cash_comum.schm  comum.schm  create_all.sql  deploy_control2.schm  gen_test_cov.py  schema_example.dsl  schema_example.json  schema_example.schm  schema_example.yaml  schema_pure.py  schema_test.py  type_scenarios.txt  type_test.pict
tests/schemas/: type_test.schm  types.schm
