[tool.poetry]
name = "schema-manager"
version = "0.1.1"
description = "Schema manager tool for enterprise governance"
authors = ["branquif <branquif@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
lark-parser = "^0.6.6"

[tool.poetry.dev-dependencies]
pytest = "^4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
